--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,31 @@
+alembic==1.14.0
+bcrypt==4.2.1
 blinker==1.9.0
-click==8.1.7
+certifi==2024.12.14
+click==8.1.8
 colorama==0.4.6
-dnspython==2.7.0
-email_validator==2.2.0
+distlib==0.3.9
+filelock==3.16.1
 Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-CKEditor==0.5.1
 Flask-Login==0.6.3
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
-idna==3.10
 itsdangerous==2.2.0
-Jinja2==3.1.4
+Jinja2==3.1.5
+Mako==1.3.8
 MarkupSafe==3.0.2
-mysqlclient==2.2.6
+packaging==24.2
+pipenv==2024.4.0
+platformdirs==4.3.6
 python-dotenv==1.0.1
-python-slugify==8.0.4
+setuptools==75.8.0
+slugify==0.0.1
 SQLAlchemy==2.0.37
-text-unidecode==1.3
 typing_extensions==4.12.2
+virtualenv==20.29.1
 Werkzeug==3.1.3
 WTForms==3.2.1
