--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.14.0
 bcrypt==4.2.1
+bleach==6.2.0
 blinker==1.9.0
 certifi==2024.12.14
 click==8.1.8
@@ -10,6 +11,7 @@ Flask==3.1.0
 Flask-Bcrypt==1.0.1
 Flask-CKEditor==0.5.1
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
@@ -18,6 +20,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 MarkupSafe==3.0.2
+mysqlclient==2.2.7
 packaging==24.2
 pipenv==2024.4.0
 platformdirs==4.3.6
@@ -27,5 +30,6 @@ slugify==0.0.1
 SQLAlchemy==2.0.37
 typing_extensions==4.12.2
 virtualenv==20.29.1
+webencodings==0.5.1
 Werkzeug==3.1.3
 WTForms==3.2.1
