--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ certifi==2024.12.14
 click==8.1.8
 colorama==0.4.6
 distlib==0.3.9
+dnspython==2.7.0
+email_validator==2.2.0
 filelock==3.16.1
 Flask==3.1.0
 Flask-Bcrypt==1.0.1
@@ -16,6 +18,7 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
